<resources>
    <string name="app_name">My Application Android Labs</string>


    //LAB 2
    <string name="SwitchOnOff">Switch on / off</string>
    <string name="TextView">Look at my GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckBox">Check this out!</string>
    <string name="EditText">Type here</string>
    <string name="ToastMessage">Here is more information</string>
    <string name="SnackMessageChecked">The check box is now checked </string>
    <string name="SnackMessageUnChecked">The check box is now unchecked</string>
    <string name="SnackMessageOn">The switch is now on</string>
    <string name="SnackMessageOff">The switch is now off</string>


    //LAB 3
    <string name="EditEnterEmail">Type email here</string>
    <string name="TextEnterEmail">Enter your email address:</string>
    <string name="TextEnterPassword">Type your password:</string>
    <string name="LoginButton">Login</string>

    <string name="TextProfile">Your Profile</string>
    <string name="TextName">Your name: </string>
    <string name="EditName">Enter your name</string>
    <string name="TextEmail">Your email:</string>
    <string name="EditEmail">Enter your email</string>
    <string name="Click">Click the button above to take a picture</string>
    <string name="ToChat">Go To Chat</string>
    <string name="Send">Send</string>
    <string name="Receive">Receive</string>
    <string name="MessageBox">Type here</string>
    <string name="alertTitle">Do you want to delete this?</string>
    <string name="alertRow">"The selected row is: "</string>
    <string name="alertID">"The database id is: "</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ToWeather">Go To Weather Forecast</string>
    <string name="curTemp">The Current Temperature is:</string>
    <string name="minTemp">The Minumum Temperature is:</string>
    <string name="maxTemp">The Maximum Temperature is:</string>
    <string name="uv">The UV Index is:</string>

    <string name="ToToolbar">Go To Toolbar page</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>
