<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/TextProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextProfile"/>

    <TextView
        android:id="@+id/TextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextName"/>

    <EditText
        android:id="@+id/EditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditName"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/TextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextEmail"/>

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditEmail"
        android:inputType="textEmailAddress"/>

    <ImageButton
        android:id="@+id/ButtonCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:id="@+id/TextClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Click"/>

    <Button
        android:id="@+id/ButtonToChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ToChat"/>

</LinearLayout>