<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:layout_weight="1"
    android:columnCount="2"
    android:rowCount="4">


    <Button
        android:id="@+id/button1"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="1"

        android:text="@string/CheckBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_row="2"
        android:layout_column="0"

        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/SwitchOnOff" />

    <TextView
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:text="@string/TextView"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/EditText"
        android:inputType="textPersonName"
         />

</GridLayout>