<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextEnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextEnterEmail"/>

    <EditText
        android:id="@+id/EditEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditEnterEmail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/TextEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextEnterPassword"/>

    <EditText
        android:id="@+id/EditEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"/>

</LinearLayout>