<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:id="@+id/textView"
        android:text="@string/TextView"
        android:textSize="30dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/imageButton"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/button1"
        android:text="@string/CheckBox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button1"
        android:layout_alignParentStart="true"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/button1"
        android:layout_toEndOf="@id/imageButton"
        android:text="@string/SwitchOnOff"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:hint="@string/EditText"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/imageButton"/>
</RelativeLayout>