<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/goToChat"
            android:icon="@drawable/messages"
            android:orderInCategory="100"
            android:title="@string/ToChat"
            app:showAsAction="always" />

        <item
            android:id="@+id/goToWeather"
            android:icon="@drawable/weather"
            android:orderInCategory="200"
            android:title="@string/ToWeather"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/backToLogin"
            android:icon="@drawable/profile"
            android:orderInCategory="300"
            android:title="@string/go_back_to_login"
            app:showAsAction="ifRoom" />

</menu>